--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
 				</div>
 			</div>
 			<footer class="footer-fix radio-footer">
-				<button class="radio-stop fa fa-play"></button>
+						<button class="radio-stop fa fa-play"></button>
+
+						<span class="fa fa-volume-down radio-icon"></span>
+						<input type="range" class="radio-volume" min="0" max="100" step="1" value="100">
+						<span class="fa fa-volume-up radio-icon"></span>
 			</footer>
 		</article>
 	</main>
